clang/test/BSC/Negative/OwnedStruct/field-decl/field-decl.cbs
// RUN: %clang_cc1 -verify %s

owned struct S {
public:
  typedef int Int; // expected-error {{type name does not allow storage class to be specified}}
  Int y; // expected-error {{unknown type name 'Int'; did you mean 'int'?}}
  ~S(S this) {
    typedef double Double;
    Double d = 1.0;
  }
};

owned struct GS<T> {
public:
  typedef int Int; // expected-error {{type name does not allow storage class to be specified}}
  Int y; // expected-error {{unknown type name 'Int'; did you mean 'int'?}}
  typedef T type; // expected-error {{type name does not allow storage class to be specified}}
};

owned struct U {
public:
  typedef GS<int> gs_t; // expected-error {{type name does not allow storage class to be specified}}
  gs_t gs; // expected-error {{unknown type name 'gs_t'}}
};

owned struct UU {
public:
  typedef Int = int; // expected-error {{type name does not allow storage class to be specified}}
                     // expected-error@-1 {{expected ';' at end of declaration list}}
                     // expected-warning@-2 {{type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int}}
  Int y; // expected-error {{unknown type name 'Int'; did you mean 'int'?}}
};
